--- a/RentalService/app/src/main/res/values/strings.xml
+++ b/RentalService/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="tab_text_2">정보관리</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="facebook_app_id">[APP_ID]</string>
+    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
 </resources>
