--- a/RentalService/app/src/main/res/values/strings.xml
+++ b/RentalService/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">RentalService</string>
     <string name="tab_text_1">신청관리</string>
     <string name="tab_text_2">정보관리</string>
+    <string name="user_tab_text_1">대여신청</string>
+    <string name="user_tab_text_2">신청내역</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="facebook_app_id">316067036378902</string>
